--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,8 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets:
+    - assets/
 
 flutter_intl:
   enabled: true
