--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   path_provider: ^2.0.11
   dio_cache_interceptor_hive_store: ^3.1.0
   flutter_svg: ^2.0.7
+  fl_chart: ^0.63.0
 
 dev_dependencies:
   flutter_test:
