--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   dio_cache_interceptor_hive_store: ^3.1.0
   flutter_svg: ^2.0.7
   fl_chart: ^0.63.0
+  collection: ^1.17.2
 
 dev_dependencies:
   flutter_test:
