--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   flutter_svg: ^2.0.7
   fl_chart: ^0.63.0
   collection: ^1.17.1
+  flutter_secure_storage: ^8.0.0
 
 dev_dependencies:
   flutter_test:
