Environment variables and dependency injection
- Extract base urls and keys to environment variables.
- Refactor manual registration of dependencies, swapping it for injectable annotations on classes.
- Remove gitlens overlays in VS Code settings.
- Replace logging interceptor with the one provided by Dio.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,8 @@
         "editor.rulers": [
             150
         ],
-    }
+    },
+    "gitlens.currentLine.enabled": false,
+    "gitlens.codeLens.authors.enabled": false,
+    "gitlens.codeLens.recentChange.enabled": false,
 }
