--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,7 +47,9 @@ dependencies:
   smooth_page_indicator: ^1.2.0
   objectbox: ^4.1.0
   objectbox_sync_flutter_libs: ^4.1.0
-  intl_utils: ^2.8.7
+  intl_utils: ^2.8.8
+  flutter_dotenv: ^5.2.1
+  injectable: ^2.5.0
 
 dev_dependencies:
   flutter_test:
@@ -58,6 +60,7 @@ dev_dependencies:
   build_runner: ^2.4.12
   retrofit_generator: ^9.1.9
   objectbox_generator: ^4.1.0
+  injectable_generator: ^2.5.0
 
 flutter:
   # The following line ensures that the Material Icons font is
@@ -66,6 +69,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/icons/
+    - assets/.env
 
 flutter_intl:
   enabled: true
